// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CAlert renders correctly 1`] = `
<div
  appear="true"
  aria-atomic="true"
  aria-live="polite"
  class="alert alert-dismissible"
  name="fade"
  role="alert"
>
  <button
    aria-label="Close"
    class="close"
    type="button"
  >
    ×
  </button>
   Dismissible Alert!
</div>
`;

exports[`CAlert renders correctly 2`] = `
<div
  appear="true"
  aria-atomic="true"
  aria-live="polite"
  class="alert alert-dismissible alert-success"
  name="fade"
  role="alert"
>
  <button
    aria-label="Close"
    class="close"
    type="button"
  >
    ×
  </button>
   Dismissible Alert!
</div>
`;
